<resources>
    <string name="app_name">Truong Whey Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="search">Search</string>
    <string name="favourite">Favourite</string>
    <string name="fav">Favourite</string>
    <string name="view_detail">User</string>
    <string name="product_desc">Description</string>
</resources>