<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:title="@string/home"
        android:icon="@drawable/home_48px"/>
    <item
        android:id="@+id/action_category"
        android:title="@string/category"
        android:icon="@drawable/category_48px"/>
    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/search_48px"/>
    <item
        android:id="@+id/action_fav"
        android:title="@string/fav"
        android:icon="@drawable/favorite_48px"/>
    <item
        android:id="@+id/action_viewDetail"
        android:title="@string/view_detail"
        android:icon="@drawable/person"/>
</menu>